# red-ts3-information-grabber

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/red_ts3_info/: common.h  export.h  info_collector.h  plugin.h  ts3_channel_info.h  ts3_client_info.h  ts3_connection_info.h  ts3_server_info.h
src/: plugin.cpp  ts3_channel_info.cpp  ts3_client_info.cpp  ts3_connection_info.cpp  ts3_server_info.cpp
src/core/: info_collector.cpp
src/ts3/: callbacks.cpp
